<resources>
    <string name="app_name">FastSport</string>
    <string name="selectBody">选择体型</string>
    <string name="judgeBody">体型判断</string>
    <string name="BodyLabel1">隐形肥胖</string>
    <string name="BodyLabel2">脂肪过多</string>
    <string name="BodyLabel3">肥胖型</string>
    <string name="BodyLabel4">肌肉不足</string>
    <string name="BodyLabel5">健康匀称</string>
    <string name="BodyLabel6">超重肌肉</string>
    <string name="BodyLabel7">消瘦型</string>
    <string name="BodyLabel8">低脂肪</string>
    <string name="BodyLabelByYourself">自定</string>
    <string name="BodyEditHint">请输入</string>
    <string name="my_home">我的主页</string>
    <string name="my_news">健康资讯</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="my_code">我的二维码</string>
    <string name="plan">计划</string>
    <string name="student">学员</string>
    <string name="mine">我的</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="recive_message_time">接受短信大概需要</string>
    <string name="registe_hint">已有账号？直接登录</string>
    <string name="name">姓名</string>
    <string name="plan_name">"    "姓名"    "</string>
    <string name="sex">性别</string>
    <string name="plan_sex">"    "性别"    "</string>
    <string name="telephone">电话</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="jiaoling">教龄</string>
    <string name="adress">所在地</string>
    <string name="club">健身房名称</string>
    <string name="complete">完成</string>
    <string name="plan_title">扫描学员二维码\n填写资料</string>
    <string name="next_step">下一步</string>
    <string name="muscle_mass">肌肉量</string>
    <string name="body_fat">体脂率</string>
    <string name="normal_exercise">平时运动量</string>
    <string name="often_exercise">经常运动</string>
    <string name="contrast_photo">对比照片</string>
    <string name="last_class">肌肉量</string>
    <string name="complete_class">脂肪率</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="zhiding">制定</string>
    <string name="makePlan">制定计划</string>
    <string name="addDongZuo">添加动作</string>
    <string name="select">选择完成</string>
    <string name="makePlanTip">点击上方圆圈"\n"开始生成计划"\n"未选中默认为休息天</string>

    <string name="warm_up">热身</string>
    <string name="stretching">拉伸</string>
    <string name="main_action">具体动作</string>
    <string name="relax_action">放松动作</string>
    <string name="level">难度</string>
    <string name="newsTitle">健康资讯</string>
    <string name="showx">详情</string>

    <string name="choose_part">不限部位</string>
    <string name="xiongbu">胸部</string>
    <string name="beibu">背部</string>
    <string name="tuibu">腿部</string>
    <string name="gongerji">肱二头肌</string>
    <string name="gongsanji">肱三头肌</string>
    <string name="qianbi">前臂</string>
    <string name="jianbu">肩部</string>
    <string name="fubu">腹部</string>

    <string name="choose_equipment">不限器械</string>
    <string name="yali">哑铃</string>
    <string name="wuqixie">无器械</string>
    <string name="jianshenfang">健身房器械</string>
    <string name="gangling">杠铃</string>

    <string name="choose_type">不限类型</string>
    <string name="action_reshen">热身动作</string>
    <string name="action_lashen">拉伸</string>
    <string name="action_juti">具体动作</string>
    <string name="action_fangsong">放松动作</string>

    <string name="choose_level">全部难度</string>
    <string name="level_type1">零基础</string>
    <string name="level_type2">初学</string>
    <string name="level_type3">进阶</string>
    <string name="level_type4">强化</string>
    <string name="level_type5">挑战</string>

    <string name="choose_action_tips">找不到相关动作(⊙o⊙)\n请重新搜索</string>
    <string name="actionDetails">动作详情</string>
    <string name="longClickToShowDetail">长按可查看动作详情</string>
    <string name="shaixuan">筛选</string>
    <string name="selectChannel">选择频道</string>
    <string name="selectType">选择类别</string>
    <string name="Login">登录</string>
    <string name="Register">注册</string>
    <string name="identifySuccess">已验证成功</string>
    <string name="start">启动新鲜体验</string>
    <string name="loading">正在登录...</string>
    <string name="register_loading">正在注册...</string>
    <string name="noMore">没有更多了，不要扯我啦(┯_┯)</string>
    <string name="wx_collect_success">已收藏</string>
    <string name="wx_collect_failed">收藏</string>
    <string name="myCollection">我的收藏</string>
    <string name="noCollection">还没有找到自己喜欢的嘛？"\n"赶紧到健康资讯里面淘淘吧~</string>
    <string name="exit">退出登录</string>
</resources>
