<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime_white"
    tools:context=".fragment.MakePlanFragment">

    <RelativeLayout
        android:id="@+id/plan_rl1"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@mipmap/plan_info_bgd">


        <TextView
            android:id="@+id/plan_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/plan_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/plan_tv_nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/scanner"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/plan_tv_nextStep"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ck_sys_icon_11" />

        <com.sibo.fastsport.view.CircleImageView
            android:id="@+id/plan_iv_camera"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/plan_tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/icon_camera02" />
        <LinearLayout
            android:id="@+id/plan_ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plan_iv_camera"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/plan_et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/plan_btn_background"
                android:clickable="false"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/plan_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/plan_et_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/plan_btn_background"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/plan_sex"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:background="@color/transparent_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/plan_ll_userHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/plan_tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0CM"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/plan_ll_userWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/plan_tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0KG"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="0.5dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/plan_ll_userMuscleMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/muscle_mass"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/plan_tv_muscleMass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0KG"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/plan_ll_userBodyFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/body_fat"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/plan_tv_bodyFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0%"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/plan_rl_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plan_rl1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/plan_tv_normal_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/normal_exercise"
            android:textColor="@color/gray_hint" />

        <TextView
            android:id="@+id/plan_tv_exerciseMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/plan_tv_normal_exercise"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/often_exercise"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/you" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/rl_selectBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plan_rl_exercise"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/selectBody"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />
    </LinearLayout>
</RelativeLayout>
