<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sibo.fastsport.ui.ActionDetailsActivity">

    <include
        android:id="@+id/action_detail_toolbar"
        layout="@layout/activity_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_detail_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/action_detail_img"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:background="@mipmap/loading" />

            <LinearLayout
                android:id="@+id/action_detail_ll_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/action_detail_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/action_detail_iv_level1"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="2dp"
                        android:src="@mipmap/quanxing" />

                    <ImageView
                        android:id="@+id/action_detail_iv_level2"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="2dp"
                        android:src="@mipmap/quanxing" />

                    <ImageView
                        android:id="@+id/action_detail_iv_level3"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="2dp"
                        android:src="@mipmap/quanxing" />

                    <ImageView
                        android:id="@+id/action_detail_iv_level4"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="2dp"
                        android:src="@mipmap/quanxing" />

                    <ImageView
                        android:id="@+id/action_detail_iv_level5"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@mipmap/quanxing" />
                </LinearLayout>

                <TextView
                    android:id="@+id/action_detail_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/xiongbu"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/action_detail_equipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/jianshenfang"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_below="@id/action_detail_ll_middle"
                android:layout_marginTop="15dp"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/action_detail_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:lineSpacingExtra="1dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/makePlanTip"
                android:textColor="@color/black" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
